fixed top menu links

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 /* Navigation Bar */
 
 #home {
-  background-color:  #7600bc;
+  background-color:  #4e027a;
   padding-bottom: 1cm;
   margin-left:-1cm;
   margin-right:-1cm;
